# Helios_v3

./: .env.example  .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LOCAL_TEST_STATUS.md  README.md  README_DOCKER.md  docker-compose.dev.yml  docker-compose.yml
PRD/: implementation_plan_v1.md
backend/: .coveragerc  .dockerignore  .gitignore  DATA_POPULATION.md  Dockerfile  README.md  README_TESTING.md  config.py  database.py  pyproject.toml  pytest.ini  requirements.txt
backend/middleware/: auth.py
backend/models/: __init__.py  text.py
backend/parsers/: perseus_xml_parser.py
backend/routers/: analysis.py  auth.py
backend/scripts/: __init__.py  copy_greek_texts.sh  init_db.sql  populate_texts.py
backend/services/: morphology.py
backend/src/: config.py  config_test.py  database.py  main.py
backend/src/middleware/: auth.py  performance.py
backend/src/models/: __init__.py  annotation.py  study.py  text.py  user.py
backend/src/parsers/: __init__.py
backend/src/routers/: aeneas.py  analysis.py  annotations.py  auth.py  study.py  texts.py  tutor.py
backend/src/scripts/: migrate_to_postgres.py  populate_on_startup.py  populate_texts.py
backend/src/services/: aeneas_service.py  llm.py  morphology.py  tutor.py
backend/src/utils/: security.py
backend/tests/: __init__.py  conftest.py  test_tutor.py
backend/tests/integration/: __init__.py  test_analysis_endpoints.py  test_annotation_endpoints.py  test_database.py  test_text_endpoints.py
backend/tests/unit/: __init__.py  test_config.py  test_morphology_service.py  test_security.py
frontend/: .dockerignore  Caddyfile  Dockerfile  Dockerfile.dev  README.md  README_TESTING.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.ts  (+1 more)
(+23 files in other folders)
