[project]
name = "helios-backend"
version = "0.1.0"
description = "Backend for Helios"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = "~=3.13.0"

dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.2.1",
    "httpx>=0.25.0",
    "lxml>=4.9.3",
    "cltk[stanza]>=2.0.2",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.2.0",
    "jax >= 0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
